minor fix for overflows of p elements

--- a/css/themes/clashroyale.css
+++ b/css/themes/clashroyale.css
@@ -1602,7 +1602,7 @@ pre code {
   }
 }
 /* FIX: Chrome is weird with text selections if there is an element with negative margins overflowing out of a p element */
-p {
+#main-content p {
   overflow: auto;
 }
 table {
